RESOLVED FIXED117647
WKPageFindStringMatches ignores the kWKFindOptionsBackwards option
https://bugs.webkit.org/show_bug.cgi?id=117647
Summary WKPageFindStringMatches ignores the kWKFindOptionsBackwards option
Enrica Casucci
Reported 2013-06-14 11:55:46 PDT
The API will always return the matched ranges in the DOM order and that is the expected behavior, but it should respect the backwards options when considering the match after the user selection. <rdar://problem/13881024>
Attachments
Patch (14.50 KB, patch)
2013-06-14 13:31 PDT, Enrica Casucci
darin: review+
buildbot: commit-queue-
Enrica Casucci
Comment 1 2013-06-14 13:31:36 PDT
Build Bot
Comment 2 2013-06-14 14:16:04 PDT
Darin Adler
Comment 3 2013-06-14 14:25:45 PDT
Comment on attachment 204733 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=204733&action=review I think the test coverage might still be a bit light. It would be good to exercise even more edge cases. No specific ideas for that, though. r=me if you fix the header and thus fix the build > Source/WebKit2/Shared/API/c/WKFindOptions.h:45 > +const int kWKFindResultNoMatchAfterUserSelection = -1; Since this is a C header we can’t use: const int kWKFindResultNoMatchAfterUserSelection = -1; We can follow the CoreFoundation style and use an enum for this: enum { kWKFindResultNoMatchAfterUserSelection = -1 }; Or we can perhaps use this: static const int kWKFindResultNoMatchAfterUserSelection = -1; This is why the Mac build is failing.
Enrica Casucci
Comment 4 2013-06-14 15:21:58 PDT
Fixed header file to use enum. Committed revision 151607.
Note You need to log in before you can comment on or make changes to this bug.