Source/WebKit2/Shared/API/c/WKFindOptions.h
@@ -42,6 +42,8 @@ enum {
 };
 typedef uint32_t WKFindOptions;
 
+enum { kWKFindResultNoMatchAfterUserSelection = -1 };
+
 #ifdef __cplusplus
 }
 #endif
